--- a/Frontend-client/src/index.css
+++ b/Frontend-client/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #f7931a;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f2a900;
 }
 
 body {
